--- a/templates/store/base.html
+++ b/templates/store/base.html
@@ -146,8 +146,8 @@
 
 <footer class="container py-5 footer">
     <hr>
-    <div class="pt-4">
-        <div class="col-12 col-md">
+    <div class="d-flex pt-4">
+        <div class="col-2 col-md">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                  class="bi bi-asterisk" viewBox="0 0 16 16">
                 <path
@@ -155,7 +155,7 @@
             </svg>
             <small class="d-block mb-3 text-muted">&copy; 2017-2021</small>
         </div>
-        <div class="col-5 col-md fs15">
+        <div class="col-lg-2 col-md fs15">
             <h5>Features</h5>
             <ul class="list-unstyled">
                 <li><a class="link-secondary text-decoration-none" href="#">Cool stuff</a></li>
@@ -166,7 +166,7 @@
                 <li><a class="link-secondary text-decoration-none" href="#">Last time</a></li>
             </ul>
         </div>
-        <div class="col-5 col-md fs15">
+        <div class="col-lg-2 col-md fs15">
             <h5>Resources</h5>
             <ul class="list-unstyled">
                 <li><a class="link-secondary text-decoration-none" href="#">Resource name</a></li>
@@ -175,7 +175,7 @@
                 <li><a class="link-secondary text-decoration-none" href="#">Final resource</a></li>
             </ul>
         </div>
-        <div class="col-5 col-md fs15">
+        <div class="col-lg-2 col-md fs15">
             <h5>Resources</h5>
             <ul class="list-unstyled">
                 <li><a class="link-secondary text-decoration-none" href="#">Business</a></li>
@@ -184,7 +184,7 @@
                 <li><a class="link-secondary text-decoration-none" href="#">Gaming</a></li>
             </ul>
         </div>
-        <div class="col-5 col-md">
+        <div class="col-lg-2col-md">
             <h5>About</h5>
             <ul class="list-unstyled">
                 <li><a class="link-secondary text-decoration-none" href="#">Team</a></li>
@@ -195,7 +195,8 @@
         </div>
     </div>
 </footer>
-
+<div class="owner sticky-bottom">
+    <p class="container">SwiftMoon</p></div>
 <script type="text/javascript" src="{% static 'vendor/bootstrap/js/bootstrap.js' %}"></script>
 </body>
 
