--- a/assets/core/css/base.css
+++ b/assets/core/css/base.css
@@ -1,46 +1,56 @@
 /* Bootstrap Over-ride */
-@media (min-width: 1000px){
-    .container{
+@media (min-width: 1000px) {
+    .container {
         max-width: 1000px;
     }
 }
-@media (max-width: 1200px){
-    .container{
+
+@media (max-width: 1200px) {
+    .container {
         max-width: 100%;
-        padding:0 24px;
+        padding: 0 24px;
     }
 }
+
 .dropdown-toggle::after {
     display: none;
 }
-.dropdown-menu{
-    top:58px;
-    left:0px;
-    padding:10px;
+
+.dropdown-menu {
+    top: 58px;
+    left: 0px;
+    padding: 10px;
 }
 
-.alert-primary{
+.alert-primary {
     background-color: #E4F1FF;
 }
 
 
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-html, body, p, div{
+
+html,
+body,
+p,
+div {
     letter-spacing: -0.02px;
     font-family: 'Roboto', sans-serif;
 }
-.fs12{
+
+.fs12 {
     font-size: 12px;
 }
-.fs15{
+
+.fs15 {
     font-size: 0.9375rem;
 }
 
-.fw300{
+.fw300 {
     font-weight: 300;
 }
-.fw500{
+
+.fw500 {
     font-weight: 500;
 }
 
@@ -52,18 +62,21 @@ html, body, p, div{
     width: 49px;
     height: auto;
 }
+
 /* sm */
 @media (min-width: 768px) {
     .logo {
         width: 49px;
     }
 }
+
 /* md */
 @media (min-width: 992px) {
     .logo {
         width: 60px;
     }
 }
+
 /* lg */
 @media (min-width: 1200px) {
     .logo {
@@ -73,8 +86,8 @@ html, body, p, div{
 
 /* Footer */
 
-.footer > div > div > ul > li{
-    padding-bottom:8px;
+.footer>div>div>ul>li {
+    padding-bottom: 8px;
 }
 
 /* Brand */
@@ -86,18 +99,28 @@ html, body, p, div{
 
 /* Navbar sticky */
 
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
-  }
-  .content {
+}
+
+.content {
     min-height: 10%;
-  }
-  .content-inside {
+}
+
+.content-inside {
     padding: 20px;
     padding-bottom: 50px;
-  }
-  header {
+}
+
+header {
     height: 50px;
     margin-top: -50px;
-  }
+}
+
+/* owner */
+
+.owner {
+    background-color: silver;
+}
