--- a/templates/store/base.html
+++ b/templates/store/base.html
@@ -9,12 +9,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}BookStore{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon"
-          href="https://www.pinclipart.com/picdir/middle/10-105804_clipart-open-book-within-open-book-clipart-open.png"
-          type="image/x-icon"/>
+    <link rel="shortcut icon" type="image/png" href="{% static 'image/favicon.ico' %}"/>
     <link rel="stylesheet" href="{% static 'vendor/bootstrap/css/bootstrap.css' %}">
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="{% static 'core/css/base.css' %}"/>
     <link rel="stylesheet" href="{% static 'basket/basket.css' %}"/>
 </head>
@@ -196,7 +194,9 @@
     </div>
 </footer>
 <div class="owner sticky-bottom">
-    <p class="container">SwiftMoon</p></div>
+    <p class="container">SwiftMoon</p>
+</div>
+<script rel="stylesheet" src="{% static 'vendor/jquery-3.5.1.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'vendor/bootstrap/js/bootstrap.js' %}"></script>
 </body>
 
